--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 .App {
   text-align: center;
 }
+
+.ToggleBtn_A{
+  background-color: green;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.ToggleBtn_A:hover{
+  background-color: rgb(132, 204, 132);
+}
+
+.ToggleBtn_B{
+  background-color: red;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.ToggleBtn_B:hover{
+  background-color: rgb(247, 77, 77);
+}
